--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       Copyright <a href="https://github.com/2016" class="user-mention">2016</a> © Juan José Guerra Haba<br>
       License GPL v3</p>
 
-      <p><em>&lt;&lt; I hope it can be useful to someone as it has been for me. In this case it would be appreciated email commenting use or suggestions for future improvements.  <br />
-           ¡ KEEP CREDITS, PLEASE ! &gt;&gt;</em></p>
+      <p><em>&laquo; I hope it can be useful to someone as it has been for me. In this case it would be appreciated email commenting use or suggestions for future improvements.  <br />
+           ¡ KEEP CREDITS, PLEASE ! &raquo;</em></p>
 
       <h3>
       <a id="developing-tools" class="anchor" href="#developing-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developing &amp; Tools</h3>
