--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Wrappertracer by guerratron</title>
+    <title>WrapperTracer by guerratron</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
   <body>
     <section class="page-header">
       <img src="img/sello_js.png" alt="js_ico" title="script Javascript" style="position:absolute; left:2%;" />
-      <h1 class="project-name">Wrappertracer</h1>
+      <h1 class="project-name">WrapperTracer</h1>
       <img src="img/WrapperTracer_logo.png" alt="wrappertracer_logo" title="WrapperTracer logo" />
       <h2 class="project-tagline">Analysis and &#39;JS objects&#39; Traces.</h2>
       <a href="http://guerratron.github.io/guerratron.github.io/" class="btn" style=""><img src="img/home.png" alt="home_icon" title="Guerratron GitHub home page" /></a>
